--- a/static/css/src/maachi.less
+++ b/static/css/src/maachi.less
@@ -4,7 +4,7 @@ body {
 	font-family: "Helvetica Neue",Helvetica, Arial,"Lucida Grande", sans-serif;
 }
 
-h1, h2, p{
+h1, h2, p, ul, li{
 	margin: 0;
 	padding: 0;
 }
@@ -21,7 +21,7 @@ h1, h2, p{
 	transform: translateZ(0);
 	transition : all 400ms;
 	left: 0;
-	z-index: 1;
+	z-index: 2;
 }
 
 
@@ -86,10 +86,12 @@ h1, h2, p{
 	right: 0;
 	transition : all 400ms;
 	opacity: 0;
+	overflow: auto;
 }
 
 .section.show{
 	opacity: 1;
+	z-index: 1;
 }
 
 	.section .section-wrapper{
@@ -99,6 +101,11 @@ h1, h2, p{
 	.section h2{
 		font-size: 40px;
 		font-weight: 200;
+	}
+
+	.section h3{
+		font-size: 14px;
+		font-weight: 300;
 	}
 
 	.section p.featured{
@@ -121,6 +128,16 @@ h1, h2, p{
 		color: #fff;
 		text-decoration: none;
 	}
+
+	.section ul li{
+		list-style: none;
+		min-height: 50px;
+	}
+
+		.section ul li img{
+			float: left;
+			margin: 0 8px 0 0;
+		}
 
 
 	.footer{
